feat: add comprehensive test data seeder
- Seed 5 categories, 20 books, 5 regular users, and random reviews
- Ensure idempotency with existence checks
- Simplify testing by providing realistic sample data